--- a/App/src/main/res/layout/fragment_main.xml
+++ b/App/src/main/res/layout/fragment_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity$PlaceholderFragment">
 
     <TextView
+        android:id="@+id/textView"
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
