--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,17 +9,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.tehmou.rxbookapp.MainActivity$PlaceholderFragment">
 
-    <TextView
+    <com.tehmou.rxbookapp.views.RxTextView
         android:id="@+id/book_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
+    <com.tehmou.rxbookapp.views.RxTextView
         android:id="@+id/book_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
+    <com.tehmou.rxbookapp.views.RxTextView
         android:id="@+id/book_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
