Add search field

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,9 +12,16 @@
         android:id="@+id/repositories_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <EditText
+            android:id="@+id/repositories_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:height="50dp"/>
         <ListView
             android:id="@+id/repositories_list_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_marginTop="50dp"/>
     </com.tehmou.rxbookapp.view.RepositoriesView>
 </LinearLayout>
