--- a/app/src/main/res/layout/repository_fragment.xml
+++ b/app/src/main/res/layout/repository_fragment.xml
@@ -5,6 +5,7 @@
     android:background="#ff0000">
     <include layout="@layout/widget_layout" />
     <Button
+        android:id="@+id/repository_fragment_choose_repository_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
