--- a/app/src/main/res/layout/repositories_fragment.xml
+++ b/app/src/main/res/layout/repositories_fragment.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.tehmou.rxbookapp.MainActivity$PlaceholderFragment">
+    tools:context="com.tehmou.rxbookapp.activities.MainActivity$PlaceholderFragment">
     <com.tehmou.rxbookapp.view.RepositoriesView
         android:id="@+id/repositories_view"
         android:layout_width="match_parent"
