Add introduction text

--- a/app/src/main/res/layout/repository_fragment.xml
+++ b/app/src/main/res/layout/repository_fragment.xml
@@ -4,10 +4,21 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:background="#ff0000">
     <include layout="@layout/widget_layout" />
-    <Button
-        android:id="@+id/repository_fragment_choose_repository_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:text="Change"/>
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/repository_fragment_intro" />
+        <Button
+            android:id="@+id/repository_fragment_choose_repository_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="@string/repository_fragment_change"/>
+    </LinearLayout>
 </com.tehmou.rxbookapp.view.RepositoryView>
