--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#eee"
-    android:padding="10dp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#eee"
+              android:padding="10dp"
+              android:orientation="vertical">
+    <TextView
             android:id="@+id/widget_layout_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#222" />
-        <TextView
+    <TextView
             android:id="@+id/widget_layout_stargazers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#222"/>
-        <TextView
+    <TextView
             android:id="@+id/widget_layout_forks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#222"/>
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
